<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:id="@+id/details_activity"
    android:background="@color/grey">
    <include
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_progress_bar_with_text"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showYouTubeButton="true"
        app:showFullScreenButton="true" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/background_image"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/blue"
        android:layout_marginBottom="10dp"
        android:id="@+id/cardTitle">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textSize="28sp"
        android:id="@+id/itemTitle"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardTitle"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overviewHeading"
            android:layout_marginLeft="10dp"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/overview"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/white"
            app:trimCollapsedText="show less"
            app:trimExpandedText="show more"
            app:trimLength="160"
            app:trimMode="trimModeLength"
            app:colorClickableText="@color/showMoreColor"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genresHeading"
            android:text="@string/genre"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/genre"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearHeading"
            android:text="@string/year"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/year"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:minWidth="33dp"
                android:minHeight="33dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:onClick="onclickAdd"
                android:visibility="gone"
                android:id="@+id/watchButtonAdd" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:minWidth="33dp"
                android:minHeight="33dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_remove_circle_outline_24"
                android:onClick="onClickRemove"
                android:id="@+id/watchButtonRemove" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:minWidth="33dp"
                android:minHeight="33dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_facebook_24"
                android:id="@+id/fbButton" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minWidth="33dp"
                android:minHeight="33dp"
                android:scaleType="fitXY"
                android:background="@null"
                android:src="@drawable/ic_twitter_logo_dialog"
                android:id="@+id/twitterButton" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/castHeading"
            android:text="@string/cast"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:padding="8dp"
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviewsHeading"
            android:text="@string/reviews"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="13dp"
            android:id="@+id/reviewrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recommendedHeading"
            android:text="@string/recommended_picks"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginLeft="10dp"
            android:id="@+id/recommendedrecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>